<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_home"
            android:icon="@drawable/ic_home"
            android:title="Home"/>
        <item
            android:id="@+id/item_mail"
            android:icon="@drawable/ic_mail"
            android:title="Mail"/>
        <item
            android:id="@+id/item_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="Favorite"/>

    </group>
</menu>