...
</androidx.constraintlayout.widget.ConstraintLayout> -->

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <androidx.coordinatorlayout.widget.CoordinatorLayout
...
                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:title="@string/top_app_bar"
                    app:navigationIcon="@drawable/ic_menu"
                    app:navigationContentDescription="Open menu"
                    style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
                    android:background="@android:color/transparent"
                    android:elevation="0dp"/>

            </com.google.android.material.appbar.AppBarLayout>

...
